# wybthon

./: .commitlintrc.yml  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  start_web_server.sh  wybthon.py
.github/workflows/: bench.yml  ci.yml  docs.yml  pr-lint.yml  release.yml
api/: index.html
api/component/: index.html
api/context/: index.html
api/dev/: index.html
api/dom/: index.html
api/error_boundary/: index.html
api/events/: index.html
api/flow/: index.html
api/forms/: index.html
api/hooks/: index.html
api/html/: index.html
api/kernel/: index.html
api/lazy/: index.html
api/portal/: index.html
api/primitives/: index.html
api/props/: index.html
api/reactivity/: index.html
api/reconciler/: index.html
api/router/: index.html
api/router_core/: index.html
api/store/: index.html
api/suspense/: index.html
api/template/: index.html
api/vdom/: index.html
api/vnode/: index.html
api/wybthon/: index.html
bench/: vdom_reorder_bench.py
benchmarks/: README.md  bench_runner.py  browser_bench.py
benchmarks/app/: index.html  main.py
benchmarks/images/: comparison.html  generate.sh  ranking.html
concepts/components/: index.html
concepts/context/: index.html
concepts/dom/: index.html
concepts/error-boundaries/: index.html
concepts/events/: index.html
concepts/forms/: index.html
concepts/hooks/: index.html
concepts/lifecycle/: index.html
concepts/mental-model/: index.html
concepts/primitives/: index.html
concepts/reactivity/: index.html
concepts/router/: index.html
concepts/stores/: index.html
concepts/suspense-lazy/: index.html
concepts/vdom/: index.html
docs/: api.md  examples.md  getting-started.md  index.md
docs/api/: component.md  context.md  dev.md  dom.md  error_boundary.md  events.md  flow.md  forms.md  hooks.md  html.md  kernel.md  lazy.md  portal.md  primitives.md  props.md  reactivity.md  reconciler.md  router.md  router_core.md  store.md  suspense.md  template.md  vdom.md  vnode.md  wybthon.md
docs/concepts/: components.md  context.md  dom.md  error-boundaries.md  events.md  forms.md  hooks.md  lifecycle.md  mental-model.md  primitives.md  reactivity.md  router.md  stores.md  suspense-lazy.md  vdom.md
docs/examples/: authoring-patterns.md  counter.md  errors.md  fetch.md  forms.md  router.md
docs/guides/: authoring-patterns.md  demo-app.md  deployment.md  dev-server.md  migrating-from-react.md  migrating-from-solid.md  performance.md  pyodide.md  testing.md  typing.md
docs/meta/: changelog.md  contributing.md  faq.md  roadmap.md  style-guide.md  troubleshooting.md
docs/styles/: brand.css
examples/: index.html
examples/authoring-patterns/: index.html
examples/counter/: index.html
examples/demo/: bootstrap.js  demo.py  index.html
examples/demo/app/: __init__.py  layout.py  main.py  not_found.py  page.py  routes.py
examples/demo/app/about/: __init__.py  page.py
examples/demo/app/components/: __init__.py  card.py  counter.py  hello.py  names_list.py  nav.py  theme_label.py  timer.py
examples/demo/app/contexts/: __init__.py  theme.py
examples/demo/app/docs/: __init__.py  page.py
examples/demo/app/errors/: __init__.py  page.py
examples/demo/app/fetch/: __init__.py  page.py
examples/demo/app/flow/: __init__.py  page.py
examples/demo/app/forms/: __init__.py  page.py
examples/demo/app/holes/: page.py
examples/demo/app/patterns/: __init__.py  page.py
examples/errors/: index.html
examples/fetch/: index.html
examples/forms/: index.html
examples/router/: index.html
getting-started/: index.html
guides/authoring-patterns/: index.html
guides/demo-app/: index.html
guides/deployment/: index.html
guides/dev-server/: index.html
guides/migrating-from-react/: index.html
guides/migrating-from-solid/: index.html
guides/performance/: index.html
guides/pyodide/: index.html
guides/testing/: index.html
guides/typing/: index.html
libs/wybthon/: child_component.html  index.html  start_web_server.sh  wybthon.py
meta/changelog/: index.html
meta/contributing/: index.html
meta/faq/: index.html
meta/roadmap/: index.html
meta/style-guide/: index.html
meta/troubleshooting/: index.html
search/: search_index.json
snippets/: README.md  async_fetch.py  counter.py  dark_mode.py  derived_state.py  form_validation.py  live_search.py  mini_spa.py  stopwatch.py  tic_tac_toe.py  todo_app.py
src/wybthon/: __init__.py  _warnings.py  component.py  context.py  dev.py  dom.py  error_boundary.py  events.py  flow.py  forms.py  hooks.py  html.py  kernel.py  lazy.py  portal.py  props.py  reactivity.py  reconciler.py  router.py  router_core.py  store.py  suspense.py  template.py  vdom.py  vnode.py
styles/: brand.css
tests/: conftest.py  test_component_decorator.py  test_context.py  test_dev.py  test_dom_element.py  test_error_boundary_unit.py  test_events.py  test_flow.py  test_flow_scopes.py  test_for_caching.py  test_forms.py  test_forward_ref.py  test_hooks.py  test_html.py  test_lazy.py  test_map_array.py  test_memo.py  test_ownership.py  test_portal.py  test_props.py  test_reactive_graph.py  test_reactive_holes.py  test_reactive_props.py  test_reactive_props_model.py  test_reactive_utils.py  test_reactivity.py  test_reactivity_primitives.py  test_router_core.py  test_signals.py  test_store.py  test_store_utils.py  test_suspense.py  test_suspense_list.py  test_suspense_unit.py  test_template_mount.py  test_use_reducer.py  test_validators.py  test_vdom_props.py  test_vdom_reorder.py  test_vdom_text_fastpath.py  (+2 more)
tests/e2e/: __init__.py  bootstrap.js  conftest.py  index.html  test_components.py  test_context.py  test_errors.py  test_events.py  test_flow.py  test_forms.py  test_holes.py  test_lazy.py  test_portal.py  test_props.py  test_pyodide_smoke.py  test_reactivity.py  test_router.py  test_stores.py  test_suspense.py
tests/e2e/app/: featuremeta.py  main.py  routes.py  shell.py  testkit.py
(+19 files in other folders)
