[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wybthon"
version = "0.8.0"
description = "Client-side Python SPA framework via Pyodide"
authors = [
  { name = "Owen Carey" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: WebAssembly",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material[imaging]>=9.5",
  "mkdocstrings[python]>=0.24",
]
dev = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-playwright>=0.5.0",
]
ci = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-playwright>=0.5.0",
]

[project.scripts]
wyb = "wybthon.dev:main"

[project.urls]
Homepage = "https://github.com/wybthon/wybthon"
Repository = "https://github.com/wybthon/wybthon"
Issues = "https://github.com/wybthon/wybthon/issues"
Changelog = "https://github.com/wybthon/wybthon/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 120
target-version = ['py39']
