[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wybthon"
version = "0.23.0"
description = "Client-side Python SPA framework via Pyodide"
authors = [
  { name = "Owen Carey" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: WebAssembly",
  "Framework :: AsyncIO",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material[imaging]>=9.5",
  "mkdocstrings[python]>=0.24",
  "mkdocs-autorefs>=1.0",
  "pymdown-extensions>=10.7",
]
dev = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-playwright>=0.5.0",
]
ci = [
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-playwright>=0.5.0",
]

[project.scripts]
wyb = "wybthon.dev:main"

[project.urls]
Homepage = "https://github.com/wybthon/wybthon"
Repository = "https://github.com/wybthon/wybthon"
Issues = "https://github.com/wybthon/wybthon/issues"
Changelog = "https://github.com/wybthon/wybthon/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# Docstring (D) rules use the Google convention — see [tool.ruff.lint.pydocstyle].
# Selectively enabled so tests/examples/benchmarks aren't penalised.
select = ["E", "F", "I", "D"]
# D107 (missing __init__ docstring) — mkdocstrings is configured to merge
#   __init__ into the class docstring, so the class docstring is the source of truth.
# D105 (magic method docstring) — most are self-explanatory (__repr__, __eq__, etc.).
# D203/D213 — conflict with Google convention defaults; ruff auto-suppresses
#   these via `convention = "google"` but we list them defensively.
ignore = ["D107", "D105", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"examples/**/*.py" = ["D"]
"scripts/**/*.py" = ["D"]
"benchmarks/**/*.py" = ["D"]
"docs/**/*.py" = ["D"]
"setup.py" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 120
target-version = ['py39']

# ── Semantic Release ────────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/wybthon/__init__.py:__version__"]
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix",
    "perf", "refactor", "revert", "style", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
